--- a/source/_posts/2012-12-31-firsttry.markdown
+++ b/source/_posts/2012-12-31-firsttry.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "FirstTry"
 date: 2012-12-31 00:37
 comments: true
-categories: 
+categories: Testing
 ---
 
 **Hello Octopress !**
